--- a/TcpPressureTest.Win/App.config
+++ b/TcpPressureTest.Win/App.config
@@ -15,5 +15,6 @@
     <add key="ip" value="127.0.0.1"/>
     <add key="port" value="8888"/>
     <add key="interval" value="50"/>
+    <add key="connect" value="100"/>
   </appSettings>
 </configuration>
