--- a/TcpPressureTest.Win/TcpPressureTest.Win.csproj
+++ b/TcpPressureTest.Win/TcpPressureTest.Win.csproj
@@ -47,6 +47,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -95,6 +98,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="app.manifest">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -117,6 +123,10 @@
     <ProjectReference Include="..\BeetleX\BeetleX.csproj">
       <Project>{9748690f-dd6f-4931-9a33-b09b218d1a55}</Project>
       <Name>BeetleX</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CxFlatUI\CxFlatUI.csproj">
+      <Project>{818f9757-8ea0-4756-b1bc-4c18226473f0}</Project>
+      <Name>CxFlatUI</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
