--- a/TcpPressureTest.Win/App.config
+++ b/TcpPressureTest.Win/App.config
@@ -14,7 +14,8 @@
   <appSettings>
     <add key="ip" value="127.0.0.1"/>
     <add key="port" value="8888"/>
-    <add key="interval" value="50"/>
+    <add key="interval" value="1000"/>
     <add key="connect" value="100"/>
+    <add key="senddata" value="helloworld\r\n"/>
   </appSettings>
 </configuration>
